# easySQL

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/database/: DatabaseManager.cpp  DatabaseManager.h  Query.cpp  Query.h  TableDataManager.cpp  TableDataManager.h  TableManager.cpp  TableManager.h  TableStructureManager.cpp  TableStructureManager.h  ValueFormatter.cpp  ValueFormatter.h
src/core/export/: DatabaseExporter.cpp  DatabaseExporter.h  DatabaseStructureHandler.cpp  DatabaseStructureHandler.h  QueryExporter.cpp  QueryExporter.h  SQLScriptParser.cpp  SQLScriptParser.h
src/gui/: GuiManager.cpp  GuiManager.h  raygui_impl.cpp
src/gui/commands/: CommandExecutor.cpp  CommandExecutor.h  CommandFactory.cpp  CommandFactory.h  DatabaseCommand.cpp  DatabaseCommand.h
src/gui/components/: ERDiagram.cpp  ERDiagram.h  IconRenderer.cpp  IconRenderer.h  MessageSystem.cpp  MessageSystem.h  ScrollableList.cpp  ScrollableList.h
src/gui/components/diagram/: DiagramInteractionHandler.cpp  DiagramInteractionHandler.h  DiagramTypes.h  RelationshipRenderer.cpp  RelationshipRenderer.h  TableRenderer.cpp  TableRenderer.h
src/gui/components/dialogs/: Dialog.cpp  Dialog.h  ExportDialog.cpp  ExportDialog.h  ImportDialog.cpp  ImportDialog.h
src/gui/core/: Event.h  EventBus.cpp  EventBus.h  EventData.h  EventType.h
src/gui/panels/: ConnectionPanel.cpp  ConnectionPanel.h  Panel.h  QueryPanel.cpp  QueryPanel.h  ResultsPanel.cpp  ResultsPanel.h
src/gui/states/: ApplicationState.cpp  ApplicationState.h
src/models/: DatabaseConnectionInfo.h  Message.h  QueryResult.h  Results.h
